fix z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -740,6 +740,7 @@
     padding: 6px 16px;
     position: relative;
     cursor: pointer;
+    z-index: 80;
 }
 
 .header__search-select-label {
